syntax = "proto3";

option go_package = ".;proto";

service TimeSink {
    rpc QueueEvent(QueueEventRequest) returns (QueueEventReply) {}
    rpc CancelEvent(CancelEventRequest) returns (CancelEventReply) {}
}

message QueueEventRequest {
    string id = 1;
    int32 delivery_timestamp = 2;
    bytes payload = 3;
}

message QueueEventReply {
    string cancellation_token = 1;
}

message CancelEventRequest {
    string cancellation_token = 1;
}

message CancelEventReply {
    bool cancelled = 1;
}
